<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auto Assist</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo_description">Auto Assist logo.</string>
    <string name="vehicles">Show Vehicles</string>
    <string name="incident">Record Incident</string>
    <string name="knowledgebase">Knowledgebase</string>
    <string name="title_activity_vehicle_list">VehicleList</string>
    <string name="title_activity_knowledge">KnowledgeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="vehicle_list">Vehicles</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="vehicle_hint">Vehicle name</string>
    <string name="vehicle_desc">Vehicle description</string>
    <string name="title_activity_vehicle">VehicleActivity</string>
    <string name="add_fuel">Add Fuel</string>
    <string name="mpg_graph">MPG Graph</string>
    <string name="add_maintenance">Record Maintenance</string>
    <string name="maintenance">Upcoming Maintenance</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="gallons_hint">Gallons of fuel added:</string>
    <string name="odometer_hint">Current odometer reading:</string>
    <string name="array_prompt">Select Maintenance:</string>

    <string-array name="maint_array">
        <item>Oil Change</item>
        <item>Brake Change</item>
        <item>Transmission Fluid</item>
        <item>Timing Belt</item>
    </string-array>

    <string name="title_activity_maint">MaintActivity</string>
    <string name="next_oil">Next oil change:</string>
    <string name="next_brake">Next brake pad change:</string>
    <string name="next_trans">Next transmission fluid change:</string>
    <string name="next_belt">Next timing belt change:</string>
    <string name="customMaint">Customize Maintenance</string>
    <string name="speedingButton">Getting Pulled Over</string>
    <string name="oilButton">Oil Change</string>
    <string name="brakeButton">Brake Pads</string>
    <string name="transButton">Transmission Fluid</string>
    <string name="beltButton">Timing Belt</string>
    <string name="title_activity_knowledge_display">KnowledgeDisplay</string>
    <string name="imageDescript">Image.</string>
    <string name="oilValue">Oil Maintenance Interval:</string>
    <string name="oilNum">Number</string>
    <string name="brakeValue">Brake Maintenance Interval:</string>
    <string name="brakeNum">Number</string>
    <string name="transValue">Transmssion Maintenance Interval:</string>
    <string name="transNum">Number</string>
    <string name="beltValue">Timing Belt Maintenance Interval:</string>
    <string name="beltNum">Number</string>
    <string name="viewEntries">View Fuel Entries</string>
    <string name="title_activity_entries">EntriesActivity</string>

</resources>
