<!-- We use a relative layout, for efficiency and easy alginment between objects. -->
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity" >      
    
    <!-- The text field. -->
    <TextView      
        android:id="@+id/vehicleName" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:gravity="bottom|center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="30dp"/>

    <!-- The four buttons -->    
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/add_fuel"
        android:textSize="20sp" 
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/vehicleName"
        android:layout_marginBottom="5dp"
        android:id="@+id/fuelButton"
        android:onClick="fuelButton" />
    
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/mpg_graph"
        android:textSize="20sp" 
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fuelButton"
        android:layout_marginBottom="5dp"
        android:id="@+id/mpg"
        android:onClick="mpgButton" />
    
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/add_maintenance"
        android:textSize="20sp" 
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mpg"
        android:layout_marginBottom="5dp"
        android:id="@+id/add_maintenance"
        android:onClick="addMaint" />
    
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/maintenance"
        android:textSize="20sp" 
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/add_maintenance"
        android:layout_marginBottom="5dp"
        android:id="@+id/maintenance"
        android:onClick="viewMaint" />
    
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/customMaint"
        android:textSize="20sp" 
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/maintenance"
        android:layout_marginBottom="5dp"
        android:id="@+id/customMaint"
        android:onClick="setMaint" />
    
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/viewEntries"
        android:textSize="20sp" 
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/customMaint"
        android:layout_marginBottom="5dp"
        android:id="@+id/viewEntries"
        android:onClick="viewEntries" />

</RelativeLayout>