<!-- We use a relative layout, for efficiency and easy alginment between objects. -->
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity" >    
    
    <!-- The logo. -->
    <ImageView
        android:id="@+id/logo"
        android:layout_below="@+id/oxText"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_description" />    
    
    <!-- The "Auto Assist" text field. -->
    <TextView      
        android:id="@+id/oxText" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:gravity="bottom|center"
        android:layout_marginTop="30dp"/>

    <!-- The four buttons -->    
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/vehicles"
        android:textSize="20sp" 
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"
        android:layout_marginBottom="5dp"
        android:id="@+id/vehicleButton"
        android:onClick="vehicleButton" />

</RelativeLayout>